1.0-beta2 [2011-10-26]
 - Change search path of parameter file to ~/.fenics/dolfin_parameters.xml
 - Add functions Parameters::has_parameter, Parameters::has_parameter_set 
 - Added option to store all connectivities in a mesh for TimeSeries (false by default)
 - Added option for gzip compressed binary files for TimeSeries
 - Propagate global parameters to Krylov and LU solvers
 - Fix OpenMp assemble of scalars
 - Make OpenMP assemble over sub domains work
 - DirichletBC.get_boundary_values, FunctionSpace.collapse now return a dict in Python
 - Changed name of has_la_backend to has_linear_algebra_backend
 - Added has_foo functions which can be used instead of the HAS_FOO defines
 - Less trict check on kwargs for compiled Expression
 - Add option to not right-justify tables
 - Rename summary --> list_timings
 - Add function list_linear_solver_methods
 - Add function list_lu_solver_methods
 - Add function list_krylov_solver_methods
 - Add function list_krylov_solver_preconditioners
 - Support subdomains in SystemAssembler (not for interior facet integrals)
 - Add option functionality apply("flush") to PETScMatrix
 - Add option finalize_tensor=true to assemble functions
 - Solver parameters can now be passed to solve
 - Remove deprecated function Variable::disp()
 - Remove deprecated function logging()
 - Add new class MeshValueCollection
 - Add new class MeshDomains replacing old storage of boundary markers
   as part of MeshData. The following names are no longer supported:
   * boundary_facet_cells
   * boundary_facet_numbers
   * boundary_indicators
   * material_indicators
   * cell_domains
   * interior_facet_domains
   * exterior_facet_domains
 - Rename XML tag <meshfunction> --> <mesh_function>
 - Rename SubMesh data "global_vertex_indices" --> "parent_vertex_indices"
 - Get XML input/output of boundary markers working again
 - Get FacetArea working again
1.0-beta [2011-08-11]
 - Print percentage of non-zero entries when computing sparsity patterns